--- a/.github/workflows/deploy-jekyll.yml
+++ b/.github/workflows/deploy-jekyll.yml
@@ -28,12 +28,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          # Relative path under $GITHUB_WORKSPACE to place the repository
+          path: './frontend'
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
-          source: ./frontend/build
+          source: ./frontend
           destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
