--- a/.github/workflows/deploy-jekyll.yml
+++ b/.github/workflows/deploy-jekyll.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           # Relative path under $GITHUB_WORKSPACE to place the repository
-          path: './frontend'
+          path: ./frontend
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Build with Jekyll
