--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,11 @@
     "@docusaurus/plugin-content-docs": "^2.4.0",
     "@docusaurus/preset-classic": "2.3.1",
     "@mdx-js/react": "^1.6.22",
+    "ariakit": "^2.0.0-next.43",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
+    "react-btn-checkbox": "^0.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
