--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "prebuild": "node src/scripts/getFrontmatter.js",
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "build": "docusaurus build",
@@ -23,7 +24,8 @@
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-btn-checkbox": "^0.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "gray-matter": "^4.0.3"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.3.1"
