--- a/.github/workflows/deploy-on-push-to-main.yml
+++ b/.github/workflows/deploy-on-push-to-main.yml
@@ -10,8 +10,8 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
       with:
-        node-version: 16
-    - working-directory: /frontend
+        node-version: 18
+        path: /frontend
     - run: npm install
     - run: npm run build
     - run: npm run deploy -outDir
