--- a/.github/workflows/deploy-on-push-to-main.yml
+++ b/.github/workflows/deploy-on-push-to-main.yml
@@ -11,7 +11,7 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: 18
-        path: /frontend
+        path: ./frontend
     - run: npm install
     - run: npm run build
     - run: npm run deploy -outDir
