--- a/.github/workflows/deploy-on-push-to-main.yml
+++ b/.github/workflows/deploy-on-push-to-main.yml
@@ -11,4 +11,6 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: 18
+    - run: cd frontend
+    - run: npm run build
     - run: npm run deploy -outDir
