--- a/.github/workflows/deploy-on-push-to-main.yml
+++ b/.github/workflows/deploy-on-push-to-main.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-permissions: read-all|write-all
+permissions: write-all
 jobs:
   build:
     runs-on: ubuntu-latest
