--- a/.github/workflows/deploy-on-push-to-main.yml
+++ b/.github/workflows/deploy-on-push-to-main.yml
@@ -13,5 +13,5 @@ jobs:
       with:
         node-version: 18
     - run: cd frontend && npm install
-    - run: npm run deploy -outDir
+    - run: cd frontend && npm run deploy -outDir
       
