--- a/.github/workflows/deploy-on-push-to-main.yml
+++ b/.github/workflows/deploy-on-push-to-main.yml
@@ -4,6 +4,9 @@ on:
     branches:
       - main
 permissions: write-all
+env:
+  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
