--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -37,4 +37,5 @@ jobs:
       - name: Run Build
         if: steps.cache-build.outputs.cache-hit != 'true'
         run: |
+          cd frontend
           npm run build
