--- a/.github/workflows/deploy-on-push-to-main.yml
+++ b/.github/workflows/deploy-on-push-to-main.yml
@@ -36,6 +36,8 @@ jobs:
 
       - name: Deploy
         if: steps.cache-build.outputs.cache-hit != 'true'
+        env:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
         run: |
           cd frontend
           npm run deploy -outDir
