--- a/.github/workflows/deploy-on-push-to-main.yml
+++ b/.github/workflows/deploy-on-push-to-main.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Deploy
         if: steps.cache-build.outputs.cache-hit != 'true'
         env:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ github.actor }}
         run: |
           cd frontend
           npm run deploy -outDir
