--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "prebuild": "node src/scripts/getFrontmatter.js",
-    "docusaurus": "docusaurus",
-    "start": "docusaurus start",
     "build": "docusaurus build",
-    "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
+    "cypress:open": "cypress open",
+    "deploy": "docusaurus deploy",
+    "docusaurus": "docusaurus",
+    "prebuild": "node src/scripts/getFrontmatter.js",
+    "start": "docusaurus start",
     "serve": "docusaurus serve",
+    "swizzle": "docusaurus swizzle",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids"
   },
@@ -28,7 +29,8 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.3.1"
+    "@docusaurus/module-type-aliases": "2.3.1",
+    "cypress": "12.12.0"
   },
   "browserslist": {
     "production": [
