--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -19,7 +19,9 @@ jobs:
           cd frontend
           npm install
 
-      - name: Cypress run
-        uses: cypress-io/github-action@v5
+      - name: Run Cypress
+        run: | 
+          cd frontend
+          npx cypress open
         
         
