--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -19,7 +19,13 @@ jobs:
           cd frontend
           npm install
 
+      - name: Build website
+        run: |
+          cd frontend
+          npm run build
+          
       - name: Cypress run
         uses: cypress-io/github-action@v5
-        
+        with:
+          start: npm start
         
