--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
+    "@docsearch/react": "3.3.5",
     "@docusaurus/core": "2.3.1",
     "@docusaurus/plugin-content-docs": "^2.4.0",
     "@docusaurus/preset-classic": "2.3.1",
