--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "serve": "docusaurus serve",
     "swizzle": "docusaurus swizzle",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "generate-sidebar": "node src/scripts/generateSidebar.js"
   },
   "dependencies": {
     "@docsearch/react": "3.3.5",
