--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,7 @@
     "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
     "react-btn-checkbox": "^0.0.1",
-    "react-dom": "^18.2.0",
-    "react-select": "5.7.3"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.1.0",
