--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,15 +16,15 @@
   },
   "dependencies": {
     "@docsearch/react": "3.3.5",
-    "@docusaurus/core": "3.1.0",
-    "@docusaurus/preset-classic": "3.1.0",
+    "@docusaurus/core": "^3.1.1",
+    "@docusaurus/preset-classic": "^3.1.1",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.1.0",
+    "@docusaurus/module-type-aliases": "^3.1.1",
     "cypress": "13.6.3"
   },
   "browserslist": {
