--- a/.github/workflows/java-code.yml
+++ b/.github/workflows/java-code.yml
@@ -46,6 +46,10 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: 11
+      - name: Set up Maven
+        uses: stCarolas/setup-maven@v5
+        with:
+          maven-version: 3.9.6
       - name: Run tests on Linux and macOS
         if: matrix.os != 'windows-latest'
         uses: nick-invision/retry@v2.8.3
@@ -74,7 +78,7 @@ jobs:
             $directories = Get-ChildItem -Path . -Recurse -Filter 'java' | Where-Object { $_.PSIsContainer -and $_.FullName -like '*\code\java*' -and $_.FullName -notlike '*\code\java\*' }
             foreach ($dir in $directories)
             {
-              Write-Host "Running tests in $dir.FullName"
+              Write-Host "Running tests in $($dir.FullName)"
               Set-Location -Path $dir.FullName
               mvn test
               Set-Location -Path $PSScriptRoot
