--- a/.github/workflows/deploy-on-push-to-main.yml
+++ b/.github/workflows/deploy-on-push-to-main.yml
@@ -1,9 +1,14 @@
 name: Deploy Docusaurus Site
 
 on:
+  pull_request:
+    paths:
+      - 'frontend/**'
   push:
     branches:
-      - main
+      - trunk
+    paths:
+      - 'frontend/**'
 
 jobs:
   build-and-deploy:
@@ -13,12 +18,12 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '18.x'
 
       - name: Install dependencies
-        run: | 
+        run: |
           cd frontend
           npm install
 
