--- a/.github/workflows/python-tips.yml
+++ b/.github/workflows/python-tips.yml
@@ -79,6 +79,7 @@ jobs:
               Set-Location -Path $dir.FullName
               python -m pip install --upgrade pip
               pip install -r requirements.txt
+              dir
               pytest *.py
               Set-Location -Path $PSScriptRoot
             }
