--- a/.github/workflows/dotnet-tips.yml
+++ b/.github/workflows/dotnet-tips.yml
@@ -6,14 +6,14 @@ on:
   workflow_dispatch:
   pull_request:
     branches:
-      - trunk
+      - main
     paths:
-      - '**/code/csharp'
+      - '**/code/csharp/**'
   push:
     branches:
-      - trunk
+      - main
     paths:
-      - '**/code/csharp'
+      - '**/code/csharp/**'
 
 env:
   DISPLAY: :99
