Fixing branch name on GH workflows

--- a/.github/workflows/java-tips.yml
+++ b/.github/workflows/java-tips.yml
@@ -6,12 +6,12 @@ on:
   workflow_dispatch:
   pull_request:
     branches:
-      - trunk
+      - main
     paths:
       - '**/code/java/**'
   push:
     branches:
-      - trunk
+      - main
     paths:
       - '**/code/java/**'
 
