--- a/frontend/tips/5-select-from-a-dropdown/code/csharp/csharp.csproj
+++ b/frontend/tips/5-select-from-a-dropdown/code/csharp/csharp.csproj
@@ -1,18 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
+    </PropertyGroup>
 
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-    <PackageReference Include="nunit" Version="3.11.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
-    <PackageReference Include="Selenium.Support" Version="4.0.0-alpha01" />
-    <PackageReference Include="Selenium.WebDriver" Version="4.0.0-alpha01" />
-  </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+      <PackageReference Include="MSTest.TestAdapter" Version="3.2.2" />
+      <PackageReference Include="MSTest.TestFramework" Version="3.2.2" />
+      <PackageReference Include="Selenium.Support" Version="4.18.1" />
+      <PackageReference Include="Selenium.WebDriver" Version="4.18.1" />
+    </ItemGroup>
 
 </Project>
