--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@docsearch/react": "3.6.0",
     "@docusaurus/core": "^3.1.1",
     "@docusaurus/preset-classic": "^3.1.1",
+    "@docusaurus/module-type-aliases": "^3.1.1",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^1.3.5",
     "raw-loader": "^4.0.2",
@@ -25,8 +26,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^3.1.1",
-    "cypress": "13.6.6"
+    "cypress": "13.6.6",
+    "@playwright/test": "1.42.1"
   },
   "browserslist": {
     "production": [
