Updating Java code for tip 5

--- a/frontend/tips/5-select-from-a-dropdown/code/java/pom.xml
+++ b/frontend/tips/5-select-from-a-dropdown/code/java/pom.xml
@@ -1,21 +1,26 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.elementalselenium</groupId>
+    <groupId>com.elemental.selenium</groupId>
     <artifactId>tips</artifactId>
     <version>1.0.0</version>
 
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-        </dependency>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 
+    <dependencies>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.0.0-alpha-1</version>
+            <version>4.18.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.10.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
