--- a/frontend/tips/5-select-from-a-dropdown/code/javascript/package.json
+++ b/frontend/tips/5-select-from-a-dropdown/code/javascript/package.json
@@ -1,6 +1,15 @@
 {
   "dependencies": {
-    "mocha": "^6.1.4",
-    "selenium-webdriver":"4.0.0-alpha.1"
-  }
+    "selenium-webdriver": "4.18.1"
+  },
+  "description": "A project to showcase working with multiple windows using official WebdriverJs",
+  "devDependencies": {
+    "mocha": "^10.2.0"
+  },
+  "license": "MIT",
+  "name": "download-a-file",
+  "scripts": {
+    "test": "npx mocha test/**/*.spec.js --timeout 60000"
+  },
+  "version": "1.0.0"
 }
