--- a/frontend/tips/5-select-from-a-dropdown/code/ruby/Gemfile
+++ b/frontend/tips/5-select-from-a-dropdown/code/ruby/Gemfile
@@ -1,4 +1,4 @@
 source 'https://rubygems.org'
 
-gem 'rspec', '~>3.8.0'
-gem 'selenium-webdriver', '~>4.0.0.alpha.2'
+gem 'rspec', '~> 3.10'
+gem 'selenium-webdriver', '~> 4.18.0'
