--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,5 @@
 [build]
+    base = "frontend/"
     command = "cd frontend && npm install && npm run build"
     publish = "frontend/build"
 
@@ -6,19 +7,22 @@
     NODE_VERSION = "18"
 
 [context.production]
-    command = "npm install && npm run build"
+    base = "frontend/"
+    command = "cd frontend && npm install && npm run build"
 
 [context.production.environment]
     NODE_VERSION = "18"
 
 [context.branch-deploy]
-    command = "npm install && npm run build"
+    base = "frontend/"
+    command = "cd frontend && npm install && npm run build"
 
 [context.branch-deploy.environment]
     NODE_VERSION = "18"
 
 [context.deploy-preview]
-    command = "npm install && npm run build"
+    base = "frontend/"
+    command = "cd frontend && npm install && npm run build"
 
 [context.deploy-preview.environment]
     NODE_VERSION = "18"
