--- a/frontend/tips/3-work-with-frames/code/serenity-js/package.json
+++ b/frontend/tips/3-work-with-frames/code/serenity-js/package.json
@@ -3,17 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "playwright test"
+    "test": "playwright test",
+    "postinstall": "playwright install --with-deps"
   },
   "license": "MIT",
   "homepage": "https://serenity-js.org",
   "dependencies": {
     "@playwright/test": "1.42.1",
-    "@serenity-js/assertions": "3.21.0",
-    "@serenity-js/core": "3.21.0",
-    "@serenity-js/console-reporter": "3.21.0",
-    "@serenity-js/playwright-test": "3.21.0",
-    "@serenity-js/web": "3.21.0"
+    "@serenity-js/assertions": "3.21.1",
+    "@serenity-js/core": "3.21.1",
+    "@serenity-js/console-reporter": "3.21.1",
+    "@serenity-js/playwright-test": "3.21.1",
+    "@serenity-js/web": "3.21.1"
   },
   "devDependencies": {
     "@types/node": "20.11.25",
