--- a/frontend/tips/2-download-a-file/code/selenide/pom.xml
+++ b/frontend/tips/2-download-a-file/code/selenide/pom.xml
@@ -1,7 +1,7 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.elemental.selenium</groupId>
-    <artifactId>tips-selenide-upload-file</artifactId>
+    <artifactId>tips-selenide-download-file</artifactId>
     <version>1.0.0</version>
 
     <properties>
@@ -21,6 +21,12 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.10.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.25.3</version>
             <scope>test</scope>
         </dependency>
         <dependency>
