--- a/frontend/tips/1-upload-a-file/code/javascript/package.json
+++ b/frontend/tips/1-upload-a-file/code/javascript/package.json
@@ -4,7 +4,7 @@
   },
   "description": "A project to showcase uploading a file using official WebdriverJs",
   "devDependencies": {
-    "mocha": "^10.2.0"
+    "mocha": "10.2.0"
   },
   "license": "MIT",
   "name": "upload-a-file",
