--- a/frontend/tips/5-select-from-a-dropdown/code/javascript/package.json
+++ b/frontend/tips/5-select-from-a-dropdown/code/javascript/package.json
@@ -4,7 +4,7 @@
   },
   "description": "A project to showcase working with multiple windows using official WebdriverJs",
   "devDependencies": {
-    "mocha": "^10.2.0"
+    "mocha": "10.2.0"
   },
   "license": "MIT",
   "name": "select-from-a-dropdown",
