--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,16 +15,16 @@
   },
   "dependencies": {
     "@docsearch/react": "3.6.0",
-    "@docusaurus/core": "^3.1.1",
-    "@docusaurus/preset-classic": "^3.1.1",
+    "@docusaurus/core": "3.1.1",
+    "@docusaurus/preset-classic": "3.1.1",
     "clsx": "^2.0.0",
-    "prism-react-renderer": "^2.0.0",
+    "prism-react-renderer": "2.0.0",
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^3.1.1"
+    "@docusaurus/module-type-aliases": "3.1.1"
   },
   "browserslist": {
     "production": [
