--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "@docsearch/react": "3.6.0",
     "@docusaurus/core": "3.2.1",
     "@docusaurus/preset-classic": "3.2.1",
-    "clsx": "^2.0.0",
+    "clsx": "2.0.0",
     "prism-react-renderer": "2.3.1",
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
