--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "clsx": "2.1.1",
     "prism-react-renderer": "2.3.1",
     "raw-loader": "^4.0.2",
-    "react": "^18.2.0",
+    "react": "18.3.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
