--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,7 @@
     "prism-react-renderer": "2.3.1",
     "raw-loader": "^4.0.2",
     "react": "18.3.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "18.3.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.2.1"
