--- a/.github/workflows/deploy-on-push-to-main.yml
+++ b/.github/workflows/deploy-on-push-to-main.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: '0'
 
       - name: Install Node.js
         uses: actions/setup-node@v4
@@ -34,4 +36,4 @@ jobs:
         with:
           branch: gh-pages
           folder: frontend/build
-      
+
